[gd_scene load_steps=6 format=3 uid="uid://b5xgrhsvxj453"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_so4mp"]
[ext_resource type="PackedScene" uid="uid://b8opucxucl032" path="res://world/world.tscn" id="2_lh8t0"]
[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="4_qy1gp"]
[ext_resource type="PackedScene" uid="uid://dj8sjte3quqjh" path="res://ui/settings_menu/settings_menu.tscn" id="5_xiaj1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ers1e"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="main_menu" type="Node2D"]
script = ExtResource("1_so4mp")

[node name="World" parent="." instance=ExtResource("2_lh8t0")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_qy1gp")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 16.0
offset_right = 7.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Logo" type="TextureRect" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ers1e")

[node name="ButtonContainer" type="CenterContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="buttons" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PlayScenarioBtn" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons"]
layout_mode = 2
text = "Play Scenario"

[node name="PlayBtn" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons"]
layout_mode = 2
text = "Play Random Map"

[node name="SettingsBtn" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons"]
layout_mode = 2
text = "Settings"

[node name="InstructionsBtn" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons"]
visible = false
layout_mode = 2
text = "How To Play"

[node name="QuitButton" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons"]
layout_mode = 2
text = "Quit"

[node name="ScenariosContainer" type="CenterContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/ScenariosContainer"]
custom_minimum_size = Vector2(400, 160)
layout_mode = 2

[node name="AllScenarios" type="GridContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer/ScenariosContainer/ScrollContainer2"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="ReturnButton" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Return"

[node name="SettingsContainer" parent="CanvasLayer/Control/CenterContainer/VBoxContainer" instance=ExtResource("5_xiaj1")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons/PlayScenarioBtn" to="." method="_on_play_scenario_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons/SettingsBtn" to="." method="_on_settings_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/ButtonContainer/buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
